# dependabot-poetry-auto-update-bug

./: pyproject.toml
.github/: dependabot.yml
a-dependency/: pyproject.toml
subdir/: pyproject.toml
