[tool.poetry]
name = "dependabot-poetry-auto-update-bug"
version = "0.1.0"
description = ""
authors = ["firelight flagboy <firelight.flagboy@gmail.com>"]
readme = "README.md"
packages = [{include = "dependabot_poetry_auto_update_bug"}]

[tool.poetry.dependencies]
python = "~3.9.10"

parsec-cloud = { version = "2.16.0-rc.3", extras = ["backend"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
