[tool.poetry]
name = "subdir"
version = "0.1.0"
description = ""
authors = ["firelight flagboy <firelight.flagboy@gmail.com>"]
readme = "README.md"
packages = [{include = "subdir"}]

[tool.poetry.dependencies]
python = "~3.9.10"

parsec-cloud = { version = "2.16.0-rc.3", extras = ["backend"] }

[tool.poetry.group.dev.dependencies]
black = "22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
